# lhmp

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  COMPILE.md  LHMP.VC.db  LHMP.sln  LICENSE  README.md  STRUCTURE.md  TODO_GENERATED  lhmp.sln  readme.md  readme.txt
Client/: AntiCheat.cpp  AntiCheat.h  CChat.cpp  CChat.h  CColoredText.cpp  CColoredText.h  CCore.cpp  CCore.h  CCrashHandler.cpp  CCrashHandler.h  CDirect3D8Proxy.h  CDirect3DDevice8Proxy.h  CDirectInput8DeviceProxy.h  CDirectInput8Proxy.h  CEngineStack.cpp  CEngineStack.h  CEntity.cpp  CEntity.h  CFileSystem.h  CFileTransfer.cpp  CFileTransfer.h  CFont.cpp  CFont.h  CGame - kópia.cpp  CGame.cpp  CGame.h  CGameSync.cpp  CGameSync.h  CGraphics - Copy.cpp  CGraphics.cpp  CGraphics.h  CHooks.cpp  CHooks.h  CIngameMenu.cpp  CIngameMenu.h  CInterpolation.cpp  CInterpolation.h  CKeyboard.cpp  CKeyboard.h  CLocalPlayer.cpp  (+38 more)
Debug/: server.ini
Development/: Hosting Guide.docx  TODOA.txt  linuxcompile.txt  todo.txt
Loader/: Loader.sln  Loader.vcxproj  Loader.vcxproj.filters  Main.cpp  inject.cpp  inject.h  main.h  main.rc  resource.h
MasterList/: CCore.h  CNetwork.cpp  CNetwork.h  CPendingServers.cpp  CPendingServers.h  CServers.cpp  CServers.h  CServersList.cpp  CSeversList.h  Main.cpp  Makefile  MasterList.vcxproj  MasterList.vcxproj.filters  compile  howtocompile
Others/: LICENSE  todo_check.bat
Release/: Tesla  client.exp  client.lib  config.txt
Server/: CBanSystem.cpp  CBanSystem.h  CConfig.cpp  CConfig.h  CConsole.cpp  CConsole.h  CCore.cpp  CCore.h  CDoorPool.cpp  CDoorPool.h  CEntity.cpp  (+59 more)
(+329 files in other folders)
